--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "node": ">=7.0.0"
   },
   "scripts": {
-    "build": "npm run sbuild & npm run cbuild",
-    "sbuild": "tsc --project src/server",
-    "cbuild": "tsc --project src/client",
+    "build": "npm run build-srv & npm run cbuild",
+    "build-srv": "tsc --project src/server",
+    "build-cli": "tsc --project src/client",
+    "build-css": "node-sass src/scss/style.scss public/style.css",
+    "cbuild": "npm run build-cli & npm run build-css",
     "server": "node ./app/Main.js",
     "daemon": "pm2 start ./app/App.js --name=taskline",
     "stop": "pm2 stop taskline",
@@ -23,7 +25,8 @@
     "@types/express": "4.0.35",
     "@types/express-session": "0.0.32",
     "@types/passport": "0.3.2",
-    "@types/passport-google-oauth": "1.0.32"
+    "@types/passport-google-oauth": "1.0.32",
+    "node-sass": "4.5.0"
   },
   "dependencies": {
     "express": "4.14.0",
